--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <button class="btn btn-o btn-l" onclick="reseult();">=</button>
     </div>
 </div>
-<script src="js/jquery.js"></script>
+<script crossorigin="anonymous"
+        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+        referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script>
     a = false;
 
