--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 <head>
     <title>Calculator</title>
     <link href="css/style.css" rel="stylesheet">
@@ -6,36 +6,36 @@
 </head>
 <body>
 <div class="calc">
-    <div class="res">
-        <div class="res-text" id="input"></div>
+    <div class="input">
+        <div class="input-text" id="input"></div>
     </div>
     <div class="row">
-        <button class="btn" onclick="addToRes(this.value);" value="7">7</button>
-        <button class="btn" onclick="addToRes(this.value);" value="8">8</button>
-        <button class="btn" onclick="addToRes(this.value);" value="9">9</button>
-        <button class="btn btn-o" onclick="addToRes(this.value);" value="+">+</button>
+        <button class="btn" onclick="addToInput(this.value);" value="7">7</button>
+        <button class="btn" onclick="addToInput(this.value);" value="8">8</button>
+        <button class="btn" onclick="addToInput(this.value);" value="9">9</button>
+        <button class="btn btn-o" onclick="addToInput(this.value);" value="+">+</button>
     </div>
     <div class="row">
-        <button class="btn" onclick="addToRes(this.value);" value="4">4</button>
-        <button class="btn" onclick="addToRes(this.value);" value="5">5</button>
-        <button class="btn" onclick="addToRes(this.value);" value="6">6</button>
-        <button class="btn btn-o" onclick="addToRes(this.value);" value="-">-</button>
+        <button class="btn" onclick="addToInput(this.value);" value="4">4</button>
+        <button class="btn" onclick="addToInput(this.value);" value="5">5</button>
+        <button class="btn" onclick="addToInput(this.value);" value="6">6</button>
+        <button class="btn btn-o" onclick="addToInput(this.value);" value="-">-</button>
     </div>
     <div class="row">
-        <button class="btn" onclick="addToRes(this.value);" value="1">1</button>
-        <button class="btn" onclick="addToRes(this.value);" value="2">2</button>
-        <button class="btn" onclick="addToRes(this.value);" value="3">3</button>
-        <button class="btn btn-o" onclick="addToRes(this.value);" value="*">x</button>
+        <button class="btn" onclick="addToInput(this.value);" value="1">1</button>
+        <button class="btn" onclick="addToInput(this.value);" value="2">2</button>
+        <button class="btn" onclick="addToInput(this.value);" value="3">3</button>
+        <button class="btn btn-o" onclick="addToInput(this.value);" value="*">x</button>
     </div>
     <div class="row">
-        <button class="btn" onclick="addToRes(this.value);" value="0">0</button>
-        <button class="btn" onclick="addToRes(this.value);" value="00">00</button>
-        <button class="btn" onclick="addToRes(this.value);" value="000">000</button>
-        <button class="btn btn-o" onclick="addToRes(this.value);" value="/">÷</button>
+        <button class="btn" onclick="addToInput(this.value);" value="0">0</button>
+        <button class="btn" onclick="addToInput(this.value);" value="00">00</button>
+        <button class="btn" onclick="addToInput(this.value);" value="000">000</button>
+        <button class="btn btn-o" onclick="addToInput(this.value);" value="/">÷</button>
     </div>
     <div class="row">
         <button class="btn btn-o" onclick="reset();">C</button>
-        <button class="btn" onclick="addToRes(this.value);" value=".">.</button>
+        <button class="btn" onclick="addToInput(this.value);" value=".">.</button>
         <button class="btn btn-o btn-l" onclick="showResult();">=</button>
     </div>
 </div>
@@ -46,7 +46,7 @@
     append = false;
     input = $("#input");
 
-    function addToRes(val) {
+    function addToInput(val) {
         if (append) {
             setInputText(val);
             append = false;
